moved logos and added texsym graphics

--- a/cdogs_template/latex_guide.html
+++ b/cdogs_template/latex_guide.html
@@ -37,7 +37,7 @@
 
     <center>
     <img WIDTH=485 HEIGHT=243 ALIGN=BOTTOM ALT="table6" 
-    SRC="http://www.agu.org/texsym1.gif"></center>
+    SRC="texsym/texsym1.gif"></center>
     </div>
   </tr></td>
 </table>
@@ -197,42 +197,42 @@ fox jumped         over the  <br><br>     lazy
 
     <p><center>
       <img WIDTH=385 HEIGHT=242 ALIGN=BOTTOM
-      SRC="http://www.agu.org/texsym4.gif">
+      SRC="texsym/texsym4.gif">
     </center></p>
 
     <p><center>
       <img WIDTH=386 HEIGHT=762
-      SRC="http://www.agu.org/texsym5.gif">
+      SRC="texsym/texsym5.gif">
     </center></p>
 
     <p><center>
       <img WIDTH=418 HEIGHT=670
-      SRC="http://www.agu.org/texsym7.gif">
+      SRC="texsym/texsym7.gif">
     </center></p>
 
     <p><center>
       <img WIDTH=573 HEIGHT=351
-      SRC="http://www.agu.org/texsym8.gif">
+      SRC="texsym/texsym8.gif">
     </center></p>
 
     <p><center>
       <img WIDTH=403 HEIGHT=426 
-      SRC="http://www.agu.org/texsym9.gif">
+      SRC="texsym/texsym9.gif">
     </center></p>
 
     <p><center>
       <img WIDTH=355 HEIGHT=274
-      SRC="http://www.agu.org/texsym10.gif">
+      SRC="texsym/texsym10.gif">
     </center></p>
 
     <p><center>
       <img WIDTH=490 HEIGHT=578
-      SRC="http://www.agu.org/texsym11.gif">
+      SRC="texsym/texsym11.gif">
     </center></p>
 
     <p><center>
       <img WIDTH=386 HEIGHT=609
-      SRC="http://www.agu.org/texsym12.gif">
+      SRC="texsym/texsym12.gif">
     </center></p>
   </tr></td>
 </table>
