--- a/cdogs_template/latex_guide.html
+++ b/cdogs_template/latex_guide.html
@@ -24,10 +24,10 @@
     <p class="title"> TEXT MODE: Accents</p>
 
     <p class="formfill"> If you want to have an accent on a letter
-      (for example your name is Josée not Josee), then you do it
+      (for example your name is Jos&eacute;e not Josee), then you do it
       like this, sticking with the example:</p>
 
-    <p class="formfill"><strong>You Want:</strong> Hi, my name is Josée.</p>
+    <p class="formfill"><strong>You Want:</strong> Hi, my name is Jos&eacute;e.</p>
     <p class="formfill"><strong>LaTeX:</strong> Hi, my name is Jos\'{e}e.</p>
 
     <p class="formfill">The way the command works, is that the
